--- a/index.html
+++ b/index.html
@@ -3,35 +3,116 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ranks</title>
+    <title>WCA Rankings</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <input type="text" id="wcaId" />
-    <button onclick="addWCAId()">add WCA ID</button><br /><br />
+  <body
+    class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen p-4 md:p-8"
+  >
+    <div class="max-w-6xl mx-auto">
+      <div class="text-center mb-8">
+        <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-2">
+          rankings
+        </h1>
+        <p class="text-gray-600 text-lg">psych-sheet generator</p>
+      </div>
 
-    <select id="event" name="event-list">
-      <option value="333">3x3</option>
-      <option value="222">2x2</option>
-      <option value="444">4x4</option>
-      <option value="555">5x5</option>
-      <option value="666">6x6</option>
-      <option value="777">7x7</option>
-      <option value="333bf">3bld</option>
-      <option value="333fm">fmc</option>
-      <option value="333oh">oh</option>
-      <option value="clock">clock</option>
-      <option value="minx">mega</option>
-      <option value="pyram">pyra</option>
-      <option value="skewb">skewb</option>
-      <option value="sq1">sq1</option>
-      <option value="444bf">4bld</option>
-      <option value="555bf">5bld</option>
-      <option value="333mbf">mbld</option>
-    </select>
-    <button onclick="displayRanks()">display ranks</button><br /><br />
-    <button onclick="clearPersons()">clear all</button>
+      <div
+        class="bg-white rounded-xl shadow-lg p-6 mb-6 border border-gray-100"
+      >
+        <div class="flex flex-col sm:flex-row gap-4 items-end">
+          <div class="flex-1 min-w-48">
+            <label class="block text-sm font-semibold text-gray-700 mb-2"
+              >WCA ID</label
+            >
+            <input
+              type="text"
+              id="wcaId"
+              placeholder="Enter WCA ID"
+              class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 text-gray-700"
+            />
+          </div>
+          <button
+            onclick="addWCAId()"
+            class="px-6 py-3 bg-gradient-to-r from-blue-600 to-blue-700 text-white font-semibold rounded-lg hover:from-blue-700 hover:to-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transform hover:scale-105 transition-all duration-200 shadow-md"
+          >
+            Add WCA ID
+          </button>
+        </div>
+      </div>
 
-    <div id="rankDisplay"></div>
+      <div
+        class="bg-white rounded-xl shadow-lg p-6 mb-6 border border-gray-100"
+      >
+        <label class="block text-sm font-semibold text-gray-700 mb-2"
+          >Extract WCA IDs from any block of text</label
+        >
+        <textarea
+          id="bulkTextInput"
+          placeholder="Paste any text containing WCA IDs to extract them"
+          class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 text-gray-700 h-40"
+        ></textarea>
+        <button
+          onclick="extractAndAddWCAIds()"
+          class="mt-4 px-6 py-3 bg-gradient-to-r from-purple-600 to-purple-700 text-white font-semibold rounded-lg hover:from-purple-700 hover:to-purple-800 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 transform hover:scale-105 transition-all duration-200 shadow-md"
+        >
+          Extract WCA IDs
+        </button>
+      </div>
+
+      <div
+        class="bg-white rounded-xl shadow-lg p-6 mb-6 border border-gray-100"
+      >
+        <div class="flex flex-col sm:flex-row gap-4 items-end">
+          <div class="flex-1 min-w-48">
+            <label class="block text-sm font-semibold text-gray-700 mb-2"
+              >Event</label
+            >
+            <select
+              id="event"
+              class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 text-gray-700 bg-white"
+            >
+              <option value="333">3x3</option>
+              <option value="222">2x2</option>
+              <option value="444">4x4</option>
+              <option value="555">5x5</option>
+              <option value="666">6x6</option>
+              <option value="777">7x7</option>
+              <option value="333bf">3BLD</option>
+              <option value="333fm">FMC</option>
+              <option value="333oh">OH</option>
+              <option value="clock">Clock</option>
+              <option value="minx">Megaminx</option>
+              <option value="pyram">Pyraminx</option>
+              <option value="skewb">Skewb</option>
+              <option value="sq1">Square-1</option>
+              <option value="444bf">4BLD</option>
+              <option value="555bf">5BLD</option>
+              <option value="333mbf">MBLD</option>
+            </select>
+          </div>
+          <div class="flex gap-3">
+            <button
+              onclick="displayRanks()"
+              class="px-6 py-3 bg-gradient-to-r from-green-600 to-green-700 text-white font-semibold rounded-lg hover:from-green-700 hover:to-green-800 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transform hover:scale-105 transition-all duration-200 shadow-md"
+            >
+              Display Rankings
+            </button>
+            <button
+              onclick="clearPersons()"
+              class="px-6 py-3 bg-gradient-to-r from-red-600 to-red-700 text-white font-semibold rounded-lg hover:from-red-700 hover:to-red-800 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transform hover:scale-105 transition-all duration-200 shadow-md"
+            >
+              Clear All
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div
+        id="rankDisplay"
+        class="bg-white rounded-xl shadow-lg overflow-hidden border border-gray-100"
+      ></div>
+    </div>
 
     <script src="index.js"></script>
   </body>
